# nodeUp

./: .coveragerc  .env.example  .gitignore  ARCHITECTURE.md  README.md  build_mcpb.py  main.py  manifest.json  pyproject.toml
.github/workflows/: release.yml
src/job_aggregator/: cli.py  server.py
src/job_aggregator/config/: __init__.py  settings.py
src/job_aggregator/core/: logging.py
src/job_aggregator/db/: __init__.py  session.py  tables.py
src/job_aggregator/db/repositories/: __init__.py  audit.py  base.py  saved_jobs.py  search_history.py  user.py
src/job_aggregator/models/: __init__.py  health.py  job.py  search.py
src/job_aggregator/providers/: __init__.py  base.py  registry.py
src/job_aggregator/providers/indeed/: __init__.py  client.py  config.py  exceptions.py  mapper.py  provider.py
src/job_aggregator/providers/indeed_browser/: __init__.py  browser.py  config.py  exceptions.py  parser.py  provider.py  scraper.py
src/job_aggregator/providers/linkedin/: __init__.py  client.py  config.py  exceptions.py  mapper.py  provider.py
src/job_aggregator/providers/linkedin_browser/: __init__.py  browser.py  config.py  exceptions.py  parser.py  provider.py  scraper.py
src/job_aggregator/services/: __init__.py  aggregator.py  dedup.py
src/job_aggregator/tools/: __init__.py  health.py  search.py
tests/: conftest.py  test_aggregator.py  test_dedup.py  test_indeed_browser_provider.py  test_indeed_mapper.py  test_linkedin_browser_provider.py  test_linkedin_mapper.py  test_providers.py  test_repositories.py  test_tools.py
