[project]
name = "job-aggregator-mcp"
version = "0.1.0"
description = "Production-grade Job Aggregator MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "httpx>=0.28.0",
    "structlog>=25.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "patchright>=1.40.0",
]

[project.scripts]
job-aggregator = "src.job_aggregator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
